Styled first section, added image for section two elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="content">
         <section class="section one">
             <header class="header">
                 <div class="header-left">
@@ -31,9 +30,11 @@
             </header>
                 <div class="intro">
                     <div class="intro-left">
-                        <h1>This website is awesome</h1>
+                        <h1 class="intro-title">This website is awesome</h1>
                         <p>This website has some subtext that goes here under the main title.</p>
-                        <button>Sign up</button>
+                        <div>
+                            <button>Sign up</button>
+                        </div>
                     </div>
                     <div class="intro-right">
                         <div class="placeholder">
@@ -48,19 +49,19 @@
             </div>
             <div class="section-two-elements">
                 <div class="element">
-                    <div class="sqare"></div>
+                    <div class="sqare"><img src="img/index.png" alt=""></div>
                     <p class="text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="element">
-                    <div class="sqare"></div>
+                    <div class="sqare"><img src="img/index.png" alt=""></div>
                     <p class="text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="element">
-                    <div class="sqare"></div>
+                    <div class="sqare"><img src="img/index.png" alt=""></div>
                     <p class="text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="element">
-                    <div class="sqare"></div>
+                    <div class="sqare"><img src="img/index.png" alt=""></div>
                     <p class="text">this is some subtext under an illustration or image</p>
                 </div>
             </div>
@@ -81,6 +82,5 @@
         <footer>
             <p>Copyright &copy; The Odin Project 2021</p>
         </footer>
-    </div>
 </body>
 </html>
