Styled section four

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
             <p class="quoter">-Thor, God of Thunder</p>
         </section>
         <section class="section four">
-            <div>
+            <div class="section-four-div">
                 <div class="section-four-text">
                     <p class="bold">Call to action! It's time!</p>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign up</button>
+                <div class="section-four-button">
+                    <button>Sign up</button>
+                </div>
             </div>
         </section>
         <footer>
