Fixed header links

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
                 <div class="header-right">
                     <ul>
                         <li class="nav-link">
-                            <a href="section two">header link one</a>
+                            <a href="#section two">header link one</a>
                         </li>
                         <li>
-                            <a href="section three">header link two</a>
+                            <a href="#section three">header link two</a>
                         </li>
                         <li>
-                            <a href="section four">header link three</a>
+                            <a href="#section four">header link three</a>
                         </li>
                     </ul>
                 </div>
             </header>
-                <div class="intro">
+                <div id="intro" class="intro">
                     <div class="intro-left">
                         <h1 class="intro-title">This website is awesome</h1>
                         <p>This website has some subtext that goes here under the main title.</p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
         </section>
-        <section class="section two">
+        <section id="section two" class="section two">
             <div class="section-two-title">
                 <h2>Some random information.</h2>
             </div>
@@ -66,11 +66,11 @@
                 </div>
             </div>
         </section>
-        <section class="section three">
+        <section id="section three" class="section three">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="quoter">-Thor, God of Thunder</p>
         </section>
-        <section class="section four">
+        <section id="section four" class="section four">
             <div class="section-four-div">
                 <div class="section-four-text">
                     <p class="bold">Call to action! It's time!</p>
